qol: Colored Results: Color coded the cards in the drop down while guessing. The background of the card name now indicates the color of the card This should allow for easier/quicker/more efficient guessing fix: Coloring: Adjusted coloring for better visibility

--- a/public/styles.css
+++ b/public/styles.css
@@ -386,7 +386,7 @@ h1 {
 
 #suggestions li:hover,
 .suggestions-list li:hover {
-    background-color: var(--primary-color) !important;
+    background-color: #fafafa !important;
     color: #000 !important;
     font-weight: bold;
 }
